# B2B-agent

./: .env  .gitignore  main.py  pyproject.toml
src/: neel.py
src/agent_manager/agent/: agent_setup.py
src/agent_manager/prompts/: neel.md  prompt.py
src/agent_manager/session/: custom_session.py
src/agent_manager/tools/: compliance_filter.py  generate_quotes.py  leads_qualification.py  new_quote.py  nlu_tools.py  order_assistant.py  shipping_calculator.py  support_ticket_tool.py  technical_ans.py  tool.py  user_validation.py
src/core/: config.py
src/db/: db.py  support_ticket_model.py
src/model/: model.py  support_ticket.py
static/: scripts.js  styles.css
templates/: index.html
